--- a/example/.env.sample
+++ b/example/.env.sample
@@ -1,6 +1,2 @@
-CLOUDFLARE_API_TOKEN=
-ZONE_ID=
-DNS_RECORD_NAME=
-DNS_RECORD_ID=
-DNS_WILDCARD_RECORD_ID=
 OVERRIDE_CONFIGURATION_FILE_PATH=
+LOG_LEVEL=
