--- a/example/config.example.yml
+++ b/example/config.example.yml
@@ -1,11 +1,11 @@
 dns_provider:
   cloudflare:
-    api_token: ""
-    zone_id: ""
+    api_token: "your-api-token"
+    zone_id: "your-zone-id"
     records:
-      - name: codedungeon.xyz
+      - name: "domain.xyz"
         id: a123
         type: a
-      - name: "*.codedungeon.xyz"
+      - name: "*.domain.xyz"
         id: b123
         type: a
